fix(layout): fix height overflowing the navigation on macOS Safari

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -13,6 +13,7 @@
   .en-wrapper {
     width: 100%;
     max-width: $master-content-max-width;
+    height: 100%;
     margin: auto;
     display: flex;
     align-items: center;
